--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f8f9fa;
+            background-color: #bfe0dc;
             margin: 0;
             padding: 0;
         }
@@ -10,15 +10,32 @@
             margin: 50px auto;
             padding: 20px;
             background-color: #fff;
-            border-radius: 4px;
+            border-radius: 15px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         h1 {
-            text-align: center;
-            font-weight: 500;
-            margin-bottom: 30px;
-        }
+		  text-align: center;
+		  font-weight: 500;
+		  margin-bottom: 30px;
+		  background: linear-gradient(to right, #ff8a00, #e52e71);
+		  -webkit-background-clip: text;
+		  -webkit-text-fill-color: transparent;
+		  animation: gradientAnimation 5s ease infinite;
+		}
+
+		@keyframes gradientAnimation {
+		  0% {
+			background-position: 0% 50%;
+		  }
+		  50% {
+			background-position: 100% 50%;
+		  }
+		  100% {
+			background-position: 0% 50%;
+		  }
+		}
+
 
         .card {
             background-color: #f5f5f5;
@@ -40,7 +57,7 @@
         }
 
         .form-control {
-            width: 100%;
+            width: 95%;
             padding: 10px;
             font-size: 14px;
             border: 1px solid #ccc;
@@ -101,3 +118,4 @@
             font-family: 'Roboto', sans-serif;
             font-size: 14px;
         }
+		
