--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s ease;
-			margin-top: 15px;
+		margin-top: 15px;
+		margin-bottom: 20px;
         }
 
         #copyButton:hover {
