--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #bfe0dc;
+            background-color: #DEF0FFFF;
             margin: 0;
             padding: 0;
         }
