--- a/style.css
+++ b/style.css
@@ -4,6 +4,18 @@
             margin: 0;
             padding: 0;
         }
+		.dropdown-container {
+            display: none;
+        }
+        
+        .dropdown {
+            width: 150px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 13px;
+			margin-bottom: 15px;
+        }
 
         .container {
             max-width: 500px;
@@ -119,4 +131,5 @@
             font-family: 'Roboto', sans-serif;
             font-size: 14px;
         }
-		
+
+				
